# archpython-cli

./: README.md  pyproject.toml
archpython/: main.py
archpython/template/: application_service.j2  domain_service.j2  infra_service.j2  shared_service.j2
archpython/template/shared/adapters/: __init__.j2  __init__.py  application_service_adapter.j2  application_service_adapter.py  domain_service_adapter.j2  domain_service_adapter.py  infra_service_adapter.j2
